--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "I'm a data scientist and engineer currently doing my PhD at the In
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "bernardomendonca@outlook.com"
+# email: "bernardomendonca@outlook.com"
 #twitter_username: "twitteruser"
 github_username: "bernardomendonca"
 linkedin_username: "mendonca-bernardo"
