--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Welcome to my corner"
 author: "Bernardo Mendonca"
-description: "I'm a data scientist and engineer currently doing my PhD at the Institute for Sustainable Futures" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+# description: "I'm a data scientist and engineer currently doing my PhD at the Institute for Sustainable Futures" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
@@ -20,7 +20,7 @@ linkedin_username: "mendonca-bernardo"
 #########################################################################################
 theme: "minima"
 
-rss: rss
+# rss: rss
 
 kramdown:
   syntax_highlighter_opts:
